# ecr-dual-arch-immutable-buildkit-bug

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: buildkit-push.yaml  containerd-push.yaml
src/: app.py
tests/: __init__.py  conftest.py
