[tool.poetry]
name = "greeter-service"
version = "0.0.0"
description = "PoC that returns a greeting like 'Hello' for 'Hello world'"
authors = ["Vlad Ionescu <Vlaaaaaaad@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pytest-flask = "^1.1.0"
gunicorn = "^20.0.4"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.14.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"
[tool.poetry-dynamic-versioning.substitution]
substitution = ["*.py", "src/*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"]

[build-system]
# TODO Switch back to poetry-core when it's possible again
# HACK https://github.com/mtkennerly/poetry-dynamic-versioning/issues/35
requires = ["poetry>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
